--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,18 @@
-WORDPRESS_DB_USER=
-WORDPRESS_DB_PASSWORD=
-WORDPRESS_DB_HOST=
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MARIADB_ROOT_PASSWORD=
+MARIADB_DATABASE=bitnami_wordpress
+MARIADB_HOST=mariadb
+MARIADB_PORT_NUMBER=3306
+MARIADB_USER=bn_wordpress
+MARIADB_PASSWORD=
+TUNNEL_HOSTNAME=press.defn.sh
+TUNNEL_URL=https://traefik.whoa.bot
+WORDPRESS_DATABASE_NAME=bitnami_wordpress
+WORDPRESS_DATABASE_USER=bn_wordpress
+WORDPRESS_DATABASE_PASSWORD=
+WORDPRESS_USERNAME=
+WORDPRESS_PASSWORD=
+WORDPRESS_EMAIL=
+WORDPRESS_FIRST_NAME=
+WORDPRESS_LAST_NAME=
+WORDPRESS_BLOG_NAME=
+WORDPRESS_SCHEME=https
