--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,8 +4,8 @@ services:
   wordpress:
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.wordpress.rule=Host(`wordpress.whoa.bot`,`wordpress.defn.sh`)"
-      - "traefik.http.services.wordpress.loadbalancer.server.port=80"
+      - "traefik.http.routers.wordpress.rule=Host(`press.defn.sh`)"
+      - "traefik.http.services.wordpress.loadbalancer.server.port=8080"
 
 networks:
   default:
