--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - 'mariadb_data:/bitnami/mariadb'
     environment:
+      - MARIADB_HOST=mariadb
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
       - MARIADB_USER
@@ -17,8 +18,8 @@ services:
     depends_on:
       - mariadb
     environment:
-      - MARIADB_HOST
-      - MARIADB_PORT_NUMBER
+      - MARIADB_HOST=mariadb
+      - WORDPRESS_DATABASE_HOST=mariadb
       - WORDPRESS_DATABASE_USER
       - WORDPRESS_DATABASE_NAME
       - WORDPRESS_DATABASE_PASSWORD
@@ -34,6 +35,7 @@ services:
     volumes:
       - 'mariadb_restore:/bitnami/mariadb'
     environment:
+      - MARIADB_HOST=mariadb-restore
       - MARIADB_ROOT_PASSWORD
       - MARIADB_DATABASE
       - MARIADB_USER
@@ -46,7 +48,7 @@ services:
       - mariadb-restore
     environment:
       - MARIADB_HOST=mariadb-restore
-      - MARIADB_PORT_NUMBER
+      - WORDPRESS_DATABASE_HOST=mariadb-restore
       - WORDPRESS_DATABASE_USER
       - WORDPRESS_DATABASE_NAME
       - WORDPRESS_DATABASE_PASSWORD
