--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MARIADB_ROOT_PASSWORD=
 MARIADB_DATABASE=bitnami_wordpress
+MARIADB_HOST=mariadb
 MARIADB_PORT_NUMBER=3306
 MARIADB_USER=bn_wordpress
 MARIADB_PASSWORD=
