--- a/restore/docker-compose.yml
+++ b/restore/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 services:
-  mariadb:
+  mariadb-restore:
     image: 'bitnami/mariadb:10.3'
     volumes:
       - 'mariadb_data:/bitnami/mariadb'
@@ -10,15 +10,16 @@ services:
       - MARIADB_DATABASE
       - MARIADB_USER
       - MARIADB_PASSWORD
-  wordpress:
+  wordpress-restore:
     image: 'bitnami/wordpress:5'
     volumes:
       - 'wordpress_data:/bitnami/wordpress'
     depends_on:
-      - mariadb
+      - mariadb-restore
     environment:
       - MARIADB_HOST
       - MARIADB_PORT_NUMBER
+      - WORDPRESS_DATABASE_HOST
       - WORDPRESS_DATABASE_USER
       - WORDPRESS_DATABASE_NAME
       - WORDPRESS_DATABASE_PASSWORD
